Fix realartists/shiphub-cocoa#154 State popup button can get clipped

--- a/IssueWeb/app/index.css
+++ b/IssueWeb/app/index.css
@@ -103,7 +103,8 @@ div.IssueInput {
 }
 
 select.IssueState {
-  width: 100px;
+  width: 70px;
+  min-width: 70px;
   position: relative;
   right: -1px;
   margin: 0px;
